# build-farm

./: .gitignore  build-common  build-common.sh  build-mingw.sh  mingw32.cmake  mingw64.cmake
angle-patch/: CMakeLists.txt  angle.patch  make_commit_h.sh
libxslt-1.1.28/libxslt/: security.c
nasm-2.11.02/: macros.c  nasm.1  nasm.spec  ndisasm.1  version.h  version.mac  version.mak  version.nsh  version.sed
openssl-1.0.0l/: Makefile.shared
qt-everywhere-opensource-src-5.2.1/qtactiveqt/src/tools/: tools.pro
qt-everywhere-opensource-src-5.2.1/qtbase/: configure
qt-everywhere-opensource-src-5.2.1/qtbase/mkspecs/win32-g++/: qmake.conf
qt-everywhere-opensource-src-5.2.1/qtbase/src/tools/bootstrap/: bootstrap.pro
qt-everywhere-opensource-src-5.2.1/qtwebkit/: WebKit.pro
qt-everywhere-opensource-src-5.2.1/qtwebkit/Tools/qmake/mkspecs/features/: configure.prf  default_pre.prf  features.prf
zlib-1.2.8/: CMakeLists.txt
