
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(NOT MSVC)
	ADD_DEFINITIONS(-Dsprintf_s=snprintf)
ENDIF()

INCLUDE_DIRECTORIES("../angle/include" "../angle/src" "../angle/src/libGLESv2")

ADD_LIBRARY(GLESv2 SHARED
	../angle/src/common/angleutils.h
	../angle/src/common/debug.cpp
	../angle/src/common/debug.h
	../angle/src/common/event_tracer.cpp
	../angle/src/common/event_tracer.h
	../angle/src/common/RefCountObject.cpp
	../angle/src/common/RefCountObject.h
	../angle/src/common/version.h
	../angle/src/compiler/preprocessor/DiagnosticsBase.cpp
	../angle/src/compiler/preprocessor/DiagnosticsBase.h
	../angle/src/compiler/preprocessor/DirectiveHandlerBase.cpp
	../angle/src/compiler/preprocessor/DirectiveHandlerBase.h
	../angle/src/compiler/preprocessor/DirectiveParser.cpp
	../angle/src/compiler/preprocessor/DirectiveParser.h
	../angle/src/compiler/preprocessor/ExpressionParser.cpp
	../angle/src/compiler/preprocessor/ExpressionParser.h
	../angle/src/compiler/preprocessor/Input.cpp
	../angle/src/compiler/preprocessor/Input.h
	../angle/src/compiler/preprocessor/length_limits.h
	../angle/src/compiler/preprocessor/Lexer.cpp
	../angle/src/compiler/preprocessor/Lexer.h
	../angle/src/compiler/preprocessor/Macro.cpp
	../angle/src/compiler/preprocessor/MacroExpander.cpp
	../angle/src/compiler/preprocessor/MacroExpander.h
	../angle/src/compiler/preprocessor/Macro.h
	../angle/src/compiler/preprocessor/numeric_lex.h
	../angle/src/compiler/preprocessor/pp_utils.h
	../angle/src/compiler/preprocessor/Preprocessor.cpp
	../angle/src/compiler/preprocessor/Preprocessor.h
	../angle/src/compiler/preprocessor/SourceLocation.h
	../angle/src/compiler/preprocessor/Token.cpp
	../angle/src/compiler/preprocessor/Token.h
	../angle/src/compiler/preprocessor/Tokenizer.cpp
	../angle/src/compiler/preprocessor/Tokenizer.h
	../angle/src/compiler/translator/depgraph/DependencyGraphBuilder.cpp
	../angle/src/compiler/translator/depgraph/DependencyGraphBuilder.h
	../angle/src/compiler/translator/depgraph/DependencyGraph.cpp
	../angle/src/compiler/translator/depgraph/DependencyGraph.h
	../angle/src/compiler/translator/depgraph/DependencyGraphOutput.cpp
	../angle/src/compiler/translator/depgraph/DependencyGraphOutput.h
	../angle/src/compiler/translator/depgraph/DependencyGraphTraverse.cpp
	../angle/src/compiler/translator/timing/RestrictFragmentShaderTiming.cpp
	../angle/src/compiler/translator/timing/RestrictFragmentShaderTiming.h
	../angle/src/compiler/translator/timing/RestrictVertexShaderTiming.cpp
	../angle/src/compiler/translator/timing/RestrictVertexShaderTiming.h
	../angle/src/compiler/translator/BaseTypes.h
	../angle/src/compiler/translator/BuiltInFunctionEmulator.cpp
	../angle/src/compiler/translator/BuiltInFunctionEmulator.h
	../angle/src/compiler/translator/CodeGen.cpp
	../angle/src/compiler/translator/Common.h
	../angle/src/compiler/translator/Compiler.cpp
	../angle/src/compiler/translator/compilerdebug.cpp
	../angle/src/compiler/translator/compilerdebug.h
	../angle/src/compiler/translator/ConstantUnion.h
	../angle/src/compiler/translator/depgraph
	../angle/src/compiler/translator/DetectCallDepth.cpp
	../angle/src/compiler/translator/DetectCallDepth.h
	../angle/src/compiler/translator/DetectDiscontinuity.cpp
	../angle/src/compiler/translator/DetectDiscontinuity.h
	../angle/src/compiler/translator/Diagnostics.cpp
	../angle/src/compiler/translator/Diagnostics.h
	../angle/src/compiler/translator/DirectiveHandler.cpp
	../angle/src/compiler/translator/DirectiveHandler.h
	../angle/src/compiler/translator/ExtensionBehavior.h
	../angle/src/compiler/translator/ForLoopUnroll.cpp
	../angle/src/compiler/translator/ForLoopUnroll.h
	../angle/src/compiler/translator/glslang.h
	../angle/src/compiler/translator/glslang_lex.cpp
	../angle/src/compiler/translator/glslang_tab.cpp
	../angle/src/compiler/translator/glslang_tab.h
	../angle/src/compiler/translator/HashNames.h
	../angle/src/compiler/translator/InfoSink.cpp
	../angle/src/compiler/translator/InfoSink.h
	../angle/src/compiler/translator/Initialize.cpp
	../angle/src/compiler/translator/InitializeDll.cpp
	../angle/src/compiler/translator/InitializeDll.h
	../angle/src/compiler/translator/InitializeGlobals.h
	../angle/src/compiler/translator/Initialize.h
	../angle/src/compiler/translator/InitializeParseContext.cpp
	../angle/src/compiler/translator/InitializeParseContext.h
	../angle/src/compiler/translator/InitializeVariables.cpp
	../angle/src/compiler/translator/InitializeVariables.h
	../angle/src/compiler/translator/Intermediate.cpp
	../angle/src/compiler/translator/intermediate.h
	../angle/src/compiler/translator/intermOut.cpp
	../angle/src/compiler/translator/IntermTraverse.cpp
	../angle/src/compiler/translator/localintermediate.h
	../angle/src/compiler/translator/MapLongVariableNames.cpp
	../angle/src/compiler/translator/MapLongVariableNames.h
	../angle/src/compiler/translator/MMap.h
	../angle/src/compiler/translator/NodeSearch.h
	../angle/src/compiler/translator/osinclude.h
	../angle/src/compiler/translator/ossource_win.cpp
	../angle/src/compiler/translator/OutputESSL.cpp
	../angle/src/compiler/translator/OutputESSL.h
	../angle/src/compiler/translator/OutputGLSLBase.cpp
	../angle/src/compiler/translator/OutputGLSLBase.h
	../angle/src/compiler/translator/OutputGLSL.cpp
	../angle/src/compiler/translator/OutputGLSL.h
	../angle/src/compiler/translator/OutputHLSL.cpp
	../angle/src/compiler/translator/OutputHLSL.h
	../angle/src/compiler/translator/parseConst.cpp
	../angle/src/compiler/translator/ParseContext.cpp
	../angle/src/compiler/translator/ParseContext.h
	../angle/src/compiler/translator/PoolAlloc.cpp
	../angle/src/compiler/translator/PoolAlloc.h
	../angle/src/compiler/translator/Pragma.h
	../angle/src/compiler/translator/QualifierAlive.cpp
	../angle/src/compiler/translator/QualifierAlive.h
	../angle/src/compiler/translator/RemoveTree.cpp
	../angle/src/compiler/translator/RemoveTree.h
	../angle/src/compiler/translator/RenameFunction.h
	../angle/src/compiler/translator/RewriteElseBlocks.cpp
	../angle/src/compiler/translator/RewriteElseBlocks.h
	../angle/src/compiler/translator/SearchSymbol.cpp
	../angle/src/compiler/translator/SearchSymbol.h
	../angle/src/compiler/translator/ShaderLang.cpp
	../angle/src/compiler/translator/ShHandle.h
	../angle/src/compiler/translator/SymbolTable.cpp
	../angle/src/compiler/translator/SymbolTable.h
	../angle/src/compiler/translator/TranslatorESSL.cpp
	../angle/src/compiler/translator/TranslatorESSL.h
	../angle/src/compiler/translator/TranslatorGLSL.cpp
	../angle/src/compiler/translator/TranslatorGLSL.h
	../angle/src/compiler/translator/TranslatorHLSL.cpp
	../angle/src/compiler/translator/TranslatorHLSL.h
	../angle/src/compiler/translator/Types.h
	../angle/src/compiler/translator/UnfoldShortCircuitAST.cpp
	../angle/src/compiler/translator/UnfoldShortCircuitAST.h
	../angle/src/compiler/translator/UnfoldShortCircuit.cpp
	../angle/src/compiler/translator/UnfoldShortCircuit.h
	../angle/src/compiler/translator/Uniform.cpp
	../angle/src/compiler/translator/Uniform.h
	../angle/src/compiler/translator/util.cpp
	../angle/src/compiler/translator/util.h
	../angle/src/compiler/translator/ValidateLimitations.cpp
	../angle/src/compiler/translator/ValidateLimitations.h
	../angle/src/compiler/translator/VariableInfo.cpp
	../angle/src/compiler/translator/VariableInfo.h
	../angle/src/compiler/translator/VariablePacker.cpp
	../angle/src/compiler/translator/VariablePacker.h
	../angle/src/compiler/translator/VersionGLSL.cpp
	../angle/src/compiler/translator/VersionGLSL.h
	../angle/src/libGLESv2/renderer/d3d9/shaders/compiled/componentmaskps.h
	../angle/src/libGLESv2/renderer/d3d9/shaders/compiled/flipyvs.h
	../angle/src/libGLESv2/renderer/d3d9/shaders/compiled/luminanceps.h
	../angle/src/libGLESv2/renderer/d3d9/shaders/compiled/passthroughps.h
	../angle/src/libGLESv2/renderer/d3d9/shaders/compiled/standardvs.h
	../angle/src/libGLESv2/renderer/d3d9/Blit.cpp
	../angle/src/libGLESv2/renderer/d3d9/Blit.h
	../angle/src/libGLESv2/renderer/d3d9/BufferStorage9.cpp
	../angle/src/libGLESv2/renderer/d3d9/BufferStorage9.h
	../angle/src/libGLESv2/renderer/d3d9/Fence9.cpp
	../angle/src/libGLESv2/renderer/d3d9/Fence9.h
	../angle/src/libGLESv2/renderer/d3d9/Image9.cpp
	../angle/src/libGLESv2/renderer/d3d9/Image9.h
	../angle/src/libGLESv2/renderer/d3d9/IndexBuffer9.cpp
	../angle/src/libGLESv2/renderer/d3d9/IndexBuffer9.h
	../angle/src/libGLESv2/renderer/d3d9/Query9.cpp
	../angle/src/libGLESv2/renderer/d3d9/Query9.h
	../angle/src/libGLESv2/renderer/d3d9/Renderer9.cpp
	../angle/src/libGLESv2/renderer/d3d9/Renderer9.h
	../angle/src/libGLESv2/renderer/d3d9/renderer9_utils.cpp
	../angle/src/libGLESv2/renderer/d3d9/renderer9_utils.h
	../angle/src/libGLESv2/renderer/d3d9/RenderTarget9.cpp
	../angle/src/libGLESv2/renderer/d3d9/RenderTarget9.h
	../angle/src/libGLESv2/renderer/d3d9/ShaderExecutable9.cpp
	../angle/src/libGLESv2/renderer/d3d9/ShaderExecutable9.h
	../angle/src/libGLESv2/renderer/d3d9/SwapChain9.cpp
	../angle/src/libGLESv2/renderer/d3d9/SwapChain9.h
	../angle/src/libGLESv2/renderer/d3d9/TextureStorage9.cpp
	../angle/src/libGLESv2/renderer/d3d9/TextureStorage9.h
	../angle/src/libGLESv2/renderer/d3d9/VertexBuffer9.cpp
	../angle/src/libGLESv2/renderer/d3d9/VertexBuffer9.h
	../angle/src/libGLESv2/renderer/d3d9/vertexconversion.h
	../angle/src/libGLESv2/renderer/d3d9/VertexDeclarationCache.cpp
	../angle/src/libGLESv2/renderer/d3d9/VertexDeclarationCache.h
	../angle/src/libGLESv2/renderer/BufferStorage.cpp
	../angle/src/libGLESv2/renderer/BufferStorage.h
	../angle/src/libGLESv2/renderer/FenceImpl.h
	../angle/src/libGLESv2/renderer/generatemip.h
	../angle/src/libGLESv2/renderer/Image.cpp
	../angle/src/libGLESv2/renderer/Image.h
	../angle/src/libGLESv2/renderer/ImageSSE2.cpp
	../angle/src/libGLESv2/renderer/IndexBuffer.cpp
	../angle/src/libGLESv2/renderer/IndexBuffer.h
	../angle/src/libGLESv2/renderer/IndexDataManager.cpp
	../angle/src/libGLESv2/renderer/IndexDataManager.h
	../angle/src/libGLESv2/renderer/IndexRangeCache.cpp
	../angle/src/libGLESv2/renderer/IndexRangeCache.h
	../angle/src/libGLESv2/renderer/QueryImpl.h
	../angle/src/libGLESv2/renderer/Renderer.cpp
	../angle/src/libGLESv2/renderer/Renderer.h
	../angle/src/libGLESv2/renderer/RenderTarget.h
	../angle/src/libGLESv2/renderer/ShaderCache.h
	../angle/src/libGLESv2/renderer/ShaderExecutable.h
	../angle/src/libGLESv2/renderer/SwapChain.h
	../angle/src/libGLESv2/renderer/TextureStorage.cpp
	../angle/src/libGLESv2/renderer/TextureStorage.h
	../angle/src/libGLESv2/renderer/VertexBuffer.cpp
	../angle/src/libGLESv2/renderer/VertexBuffer.h
	../angle/src/libGLESv2/renderer/VertexDataManager.cpp
	../angle/src/libGLESv2/renderer/VertexDataManager.h
	../angle/src/libGLESv2/angletypes.h
	../angle/src/libGLESv2/BinaryStream.h
	../angle/src/libGLESv2/Buffer.cpp
	../angle/src/libGLESv2/Buffer.h
	../angle/src/libGLESv2/Constants.h
	../angle/src/libGLESv2/Context.cpp
	../angle/src/libGLESv2/Context.h
	../angle/src/libGLESv2/Fence.cpp
	../angle/src/libGLESv2/Fence.h
	../angle/src/libGLESv2/Float16ToFloat32.cpp
	../angle/src/libGLESv2/Framebuffer.cpp
	../angle/src/libGLESv2/Framebuffer.h
	../angle/src/libGLESv2/HandleAllocator.cpp
	../angle/src/libGLESv2/HandleAllocator.h
	../angle/src/libGLESv2/libGLESv2.cpp
	../angle/src/libGLESv2/libGLESv2.rc
	../angle/src/libGLESv2/main.cpp
	../angle/src/libGLESv2/main.h
	../angle/src/libGLESv2/mathutil.h
	../angle/src/libGLESv2/precompiled.cpp
	../angle/src/libGLESv2/precompiled.h
	../angle/src/libGLESv2/ProgramBinary.cpp
	../angle/src/libGLESv2/ProgramBinary.h
	../angle/src/libGLESv2/Program.cpp
	../angle/src/libGLESv2/Program.h
	../angle/src/libGLESv2/Query.cpp
	../angle/src/libGLESv2/Query.h
	../angle/src/libGLESv2/Renderbuffer.cpp
	../angle/src/libGLESv2/Renderbuffer.h
	../angle/src/libGLESv2/resource.h
	../angle/src/libGLESv2/ResourceManager.cpp
	../angle/src/libGLESv2/ResourceManager.h
	../angle/src/libGLESv2/Shader.cpp
	../angle/src/libGLESv2/Shader.h
	../angle/src/libGLESv2/Texture.cpp
	../angle/src/libGLESv2/Texture.h
	../angle/src/libGLESv2/Uniform.cpp
	../angle/src/libGLESv2/Uniform.h
	../angle/src/libGLESv2/utilities.cpp
	../angle/src/libGLESv2/utilities.h
	../angle/src/third_party/compiler/ArrayBoundsClamper.cpp
	../angle/src/third_party/compiler/ArrayBoundsClamper.h
	../angle/src/third_party/murmurhash/MurmurHash3.cpp
	../angle/src/third_party/murmurhash/MurmurHash3.h
	../angle/src/third_party/trace_event/trace_event.h
)

ADD_LIBRARY(EGL SHARED
	../angle/src/libEGL/Config.cpp
	../angle/src/libEGL/Config.h
	../angle/src/libEGL/Display.cpp
	../angle/src/libEGL/Display.h
	../angle/src/libEGL/libEGL.cpp
	../angle/src/libEGL/libEGL.rc
	../angle/src/libEGL/main.cpp
	../angle/src/libEGL/main.h
	../angle/src/libEGL/resource.h
	../angle/src/libEGL/Surface.cpp
	../angle/src/libEGL/Surface.h
)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET_SOURCE_FILES_PROPERTIES(
		../angle/src/libEGL/Display.cpp
		../angle/src/libEGL/libEGL.cpp
		../angle/src/libGLESv2/renderer/d3d9/Blit.cpp
		../angle/src/libGLESv2/renderer/d3d9/BufferStorage9.cpp
		../angle/src/libGLESv2/renderer/d3d9/Fence9.cpp
		../angle/src/libGLESv2/renderer/d3d9/Image9.cpp
		../angle/src/libGLESv2/renderer/d3d9/IndexBuffer9.cpp
		../angle/src/libGLESv2/renderer/d3d9/Query9.cpp
		../angle/src/libGLESv2/renderer/d3d9/Renderer9.cpp
		../angle/src/libGLESv2/renderer/d3d9/renderer9_utils.cpp
		../angle/src/libGLESv2/renderer/d3d9/RenderTarget9.cpp
		../angle/src/libGLESv2/renderer/d3d9/ShaderExecutable9.cpp
		../angle/src/libGLESv2/renderer/d3d9/SwapChain9.cpp
		../angle/src/libGLESv2/renderer/d3d9/TextureStorage9.cpp
		../angle/src/libGLESv2/renderer/d3d9/VertexBuffer9.cpp
		../angle/src/libGLESv2/renderer/d3d9/VertexDeclarationCache.cpp
		../angle/src/libGLESv2/renderer/BufferStorage.cpp
		../angle/src/libGLESv2/renderer/Image.cpp
		../angle/src/libGLESv2/renderer/ImageSSE2.cpp
		../angle/src/libGLESv2/renderer/IndexBuffer.cpp
		../angle/src/libGLESv2/renderer/IndexDataManager.cpp
		../angle/src/libGLESv2/renderer/IndexRangeCache.cpp
		../angle/src/libGLESv2/renderer/Renderer.cpp
		../angle/src/libGLESv2/renderer/TextureStorage.cpp
		../angle/src/libGLESv2/renderer/VertexBuffer.cpp
		../angle/src/libGLESv2/renderer/VertexDataManager.cpp
		../angle/src/libGLESv2/Buffer.cpp
		../angle/src/libGLESv2/Context.cpp
		../angle/src/libGLESv2/Fence.cpp
		../angle/src/libGLESv2/Float16ToFloat32.cpp
		../angle/src/libGLESv2/Framebuffer.cpp
		../angle/src/libGLESv2/HandleAllocator.cpp
		../angle/src/libGLESv2/libGLESv2.cpp
		../angle/src/libGLESv2/main.cpp
		../angle/src/libGLESv2/precompiled.cpp
		../angle/src/libGLESv2/ProgramBinary.cpp
		../angle/src/libGLESv2/Program.cpp
		../angle/src/libGLESv2/Query.cpp
		../angle/src/libGLESv2/Renderbuffer.cpp
		../angle/src/libGLESv2/ResourceManager.cpp
		../angle/src/libGLESv2/Shader.cpp
		../angle/src/libGLESv2/Texture.cpp
		../angle/src/libGLESv2/Uniform.cpp
		../angle/src/libGLESv2/utilities.cpp
	PROPERTIES
		COMPILE_FLAGS "--std=gnu++11"
	)
ENDIF()

TARGET_LINK_LIBRARIES(GLESv2 d3d9 dxguid)
TARGET_LINK_LIBRARIES(EGL GLESv2)

INSTALL(TARGETS EGL GLESv2 ARCHIVE DESTINATION "lib" LIBRARY DESTINATION "lib" RUNTIME DESTINATION "bin")
INSTALL(DIRECTORY ../angle/include/ DESTINATION "include")
